# how_much_vscode

./: cargo.toml  example.js  how_much_vscode.ts  package-lock.json  package.json
logs/: vscode-2025-12-20_10-39-14.toml  vscode-2025-12-20_11-50-07.toml  vscode-2025-12-20_11-53-49.toml
src/: main.rs
src/logs/: vscode-2025-12-20_11-48-34.toml  vscode-2025-12-20_11-49-10.toml
test_project/: Cargo.toml  pixi.toml
test_project/src/: main.rs
